Readme done and path to folder edited